axum-macros/tests/from_request/fail/enum_no_via.rs
use axum_macros::FromRequest;

#[derive(FromRequest, Clone)]
enum Extractor {}

fn main() {}
